--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -13,12 +13,12 @@
 
   <div class="field">
     <%= f.label :username %>
-    <%= f.text_area :username %>
+    <%= f.text_field :username %>
   </div>
 
   <div class="field">
     <%= f.label :password %>
-    <%= f.text_area :password %>
+    <%= f.text_field :password %>
   </div>
 
   <div class="actions">
