--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,7 +8,7 @@
       <%= f.text_field :username %>
       <%= f.label :password %>
       <%= f.password_field :password %>
-      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.label :password_confirmation, "Password Confirmation" %>
       <%= f.password_field :password_confirmation %>
       <%= f.submit "Create my account", class: "btn btn-primary" %>
     <% end %>
