--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,9 @@
     <div class="container">
         <%= link_to "Home", root_path, id: "logo" %>
         <nav>
-            <%= link_to "Log in",   login_path %>
+            <ul class="nav navbar-nav navbar-right">
+              <li><%= link_to "Log in",   login_path %></li>
+            </ul>
         </nav>
     </div>
 </header>
