added a link to shopping cart once a user logs in. Associated a shopping cart image with the cart link.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,6 +1,12 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+@mixin box_sizing {
+  -moz-box-sizing:    border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing:         border-box;
+}
+
 body {
   padding-top: 60px;
 }
@@ -20,6 +26,8 @@ textarea {
 .center h1 {
   margin-bottom: 10px;
 }
+
+/*typography*/
 
 h1, h2, h3, h4, h5, h6 {
   line-height: 1;
@@ -62,4 +70,53 @@ p {
 #logo:hover {
   color: #fff;
   text-decoration: none;
+}
+
+/*forms*/
+
+input, textarea, select, .uneditable-input {
+  border: 1px solid #bbb;
+  width: 100%;
+  margin-bottom: 15px;
+  @include box_sizing;
+}
+
+input {
+  height: auto !important;
+}
+
+#error_explanation {
+  color: red;
+  ul {
+    color: red;
+    margin: 0 0 30px 0;
+  }
+}
+
+.field_with_errors {
+  @extend .has-error;
+  .form-control {
+    color: $state-danger-text;
+  }
+}
+
+.checkbox {
+  margin-top: -10px;
+  margin-bottom: 10px;
+  span {
+    margin-left: 20px;
+    font-weight: normal;
+  }
+}
+
+#session_remember_me {
+  width: auto;
+  margin-left: 0;
+}
+
+/*table*/
+th{
+    border-right-width:medium;
+    border-right-color:#ffffff;
+    width: 25%;
 }
