--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,3 +4,7 @@
   <%= link_to "Sign up now!", signup_path,
 	  class: "btn btn-lg btn-primary" %>
 </div>
+
+<div>
+  <%= render 'products/show' %>   
+</div>
