--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,3 +25,12 @@
         </nav>
     </div>
 </header>
+<body>
+  <% if logged_in? %>
+  <% else %>
+    <div class="center jumbotron">
+      <h1>Welcome!</h1>
+        <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+    </div>
+<% end %>
+</body>
