Search/AJAX works for products.Did not implement it on the home page yet

--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,4 +1,7 @@
+<%-# Shows data in table -%>
+
 <tr>
   <td><%= product.name %></td>
+  <td><%= product.description%></td>
   <td><%= link_to 'Show', product %></td>
 </tr>
