--- a/app/views/products/_presults.html.erb
+++ b/app/views/products/_presults.html.erb
@@ -1,7 +1,10 @@
+<%-# Formats the table -%>
+
 <table width="100%" border="1">
   <thead>
     <tr>
       <th width="25%">Name</th>
+      <th width="50%">Description</th>
       <th width="25%"></th>
     </tr>
   </thead>
