--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,9 +1,9 @@
 <h1>Product search</h1>
-<%= form_tag(search_path, remote: true, id: "search_form") do %>
+<%= form_tag(searchproducts_path, remote:true, id: "search_form") do %>
   <%= text_field_tag :search, params[:search] %>
   <%= submit_tag "Search", name: nil %>
 <% end %>
 <div id="results">
-  <%= render 'results' %>
+  <%= render 'presults' %>
 </div>
 
