--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <h1>User search</h1>
-<%= form_tag(search_path, remote: true, id: "search_form") do %>
+<%= form_tag(searchuser_path, remote: true, id: "search_form") do %>
   <%= text_field_tag :search, params[:search] %>
   <%= submit_tag "Search", username: nil %>
 <% end %>
