--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :name %>
-    <%= f.text_area :name %>
+    <%= f.text_field :name %>
   </div>
 
   <div class="field">
@@ -29,6 +29,11 @@
   <div class="field">
     <%= f.label :price %>
     <%= f.number_field :price %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :photo %>
+    <%= f.file_field :photo %>
   </div>
 
   <div class="actions">
