Image is associated with products and shows up on homepage

--- a/app/views/products/_presults.html.erb
+++ b/app/views/products/_presults.html.erb
@@ -4,6 +4,7 @@
   <thead>
     <tr>
       <th width="25%">Name</th>
+      <th>Photo</th>
       <th width="50%">Description</th>
       <th width="25%"></th>
     </tr>
