--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -2,6 +2,7 @@
 
 <tr>
   <td><%= product.name %></td>
+  <td><%= image_tag product.photo.url%></td>
   <td><%= product.description%></td>
   <td><%= link_to 'Show', product %></td>
 </tr>
