--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(product) do |f| %>
+<%= form_for @product, :html => { :multipart => true} do |f| %>
   <% if product.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(product.errors.count, "error") %> prohibited this product from being saved:</h2>
@@ -32,7 +32,6 @@
   </div>
   
   <div class="field">
-    <%= f.label :photo %>
     <%= f.file_field :photo %>
   </div>
 
