--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<%= image_tag @product.photo.url(:small)%>
+<%= image_tag @product.photo.url%>
 
 <p>
   <strong>Description:</strong>
