reformatted a couple of pages. Added an 'Add to cart' button on home page, but that will only show the cart's page for now

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -120,3 +120,15 @@ th{
     border-right-color:#ffffff;
     width: 25%;
 }
+
+table {
+  width: 100%;
+}
+td{
+  width: 50%;
+}
+.but_area
+{
+   width: 10%; //Change as per your requirement
+   margin: auto;
+}
