--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -3,24 +3,22 @@
 <%= image_tag @product.photo.url%>
 
 <p>
+  <strong>Name:</strong>
+  <%= @product.name %>
+</p>
+
+<p>
   <strong>Description:</strong>
   <%= @product.description %>
 </p>
 
 <p>
-  <strong>Category:</strong>
-  <%= @product.category_id %>
-</p>
-
-<p>
   <strong>Price:</strong>
-  <%= @product.price %>
+  $<%= @product.price %>
 </p>
 
 <p>
-  <strong>Name:</strong>
-  <%= @product.name %>
+  <%= button_to 'Add to cart', carts_path, :method => "get" %>
 </p>
 
-<%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
