--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,19 +1,6 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>User:</strong>
-  <%= @cart.user_id %>
-</p>
-
-<p>
-  <strong>Product:</strong>
-  <%= @cart.product_id %>
-</p>
-
-<p>
-  <strong>Quantity:</strong>
-  <%= @cart.quantity %>
-</p>
+<div class="shopping-cart">
+  <%= render "shopping_cart" %>
+</div>
 
 <%= link_to 'Edit', edit_cart_path(@cart) %> |
-<%= link_to 'Back', carts_path %>
+<%= link_to 'Back', cart_path %>
