--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,8 @@
         <nav>
             <ul class="nav navbar-nav navbar-right">
               <% if logged_in? %>
-                <li><%= link_to image_tag("cart.png", :size=>"27x30"), carts_path %></li>
+                <li><h1 class="cart-text"><%= render 'layouts/cart_text' %></h1></li>
+                <li><%= link_to image_tag("cart.png", :size=>"27x30"), cart_path %></li>
                 <li class = "dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                     Account <b class="caret"></b>
