Changes some stuff. Product's search is broken again

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,6 +4,6 @@
   <%= submit_tag "Search", name: nil %>
 <% end %>
 <div id="results">
-  <%= render 'presults' %>
+  <%= render @products %>
 </div>
 
