--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,30 +1,12 @@
 <%-# Shows data in table   cart_path,:method => "get", -%>
 
-    <table style="border-bottom: 5px solid #cdd0d4;">
-      <tr> 
-        <td rowspan="4"><%= image_tag product.photo.url%></td>
-        <td><h1><%= link_to product.name, product %></h1></td>
-      </tr>
-      <tr>
-        <td colspan="2" align="right"><%= product.description%></td>
-      </tr>
-      <tr>
-        <td colspan="2" align="right">Price: $<%= product.price%>.00</td>
-      </tr>
-      <tr>
-        <td> </td>
-        
-      </tr>
-      <tr></tr>
-    </table>
-
-
 <h3 class="text-center">Products for Sale</h3>
 
 <div class="row">
-  <div class="col-xs-6 col-xs-offset-3">
+  <div >
     <% @products.each do |product| %>
       <%= render "product_row", product: product, order_item: @order_item %>
     <% end %>
   </div>
 </div>
+
