--- a/app/views/products/_product_row.html.erb
+++ b/app/views/products/_product_row.html.erb
@@ -3,10 +3,13 @@
   <div class="row">
     <div class="col-xs-8">
       <h4><%= product.name %></small></h4>
+      <%= image_tag product.photo.url%>
     </div>
     <div class="col-xs-4">
-      
+      <br/><br/>
+      <h4><%= product.description%></h4><br/><br/><br/><br/>
       <%= form_for order_item, remote: true do |f| %>
+      
       <h4 class="text-right">Unit Price: <span style="color: green"><%= number_to_currency product.price %></span></h4>
         <div class="input-group">
           <%= f.number_field :quantity, value: 1, class: "form-control", min: 1 %>
