--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,6 +1,5 @@
+<!--Renders the shopping cart page-->
 <div class="shopping-cart">
   <%= render "shopping_cart" %>
 </div>
 
-<%= link_to 'Edit', edit_cart_path(@cart) %> |
-<%= link_to 'Back', cart_path %>
