--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,18 +1,17 @@
+<!--Header views-->
 <header class="navbar navbar-fixed-top navbar-inverse">
     <div class="container">
         <%= link_to "Home", root_path, id: "logo" %>
         <nav>
             <ul class="nav navbar-nav navbar-right">
               <% if logged_in? %>
-                <li><h1 class="cart-text"><%= render 'layouts/cart_text' %></h1></li>
-                <li><%= link_to image_tag("cart.png", :size=>"27x30"), cart_path %></li>
+                <li><h1 class="cart-text"><%= render 'layouts/cart_text' %><%= link_to image_tag("cart.png", :size=>"27x30"), cart_path %></li>
                 <li class = "dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                     Account <b class="caret"></b>
                   </a>
                   <ul class="dropdown-menu">
                     <li><%= link_to "Profile", current_user %></li>
-                    <li><%= link_to "Settings", '#' %></li>
                     <li class="divider"></li>
                     <li>
                       <%= link_to "Log out", logout_path, method: "delete" %>
