--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,6 @@
+<!-- A path to form, which lets you create new products. -->
 <h1>New Product</h1>
 
-<%= render 'form', product: @product %>
+<%= render 'form'%>
 
 <%= link_to 'Back', products_path %>
