Fixed some unmentioned bugs

--- a/app/views/order_items/create.js.erb
+++ b/app/views/order_items/create.js.erb
@@ -1,5 +1,5 @@
 <% if @order.errors.any? || @order_item.errors.any? %>
-alert("not valid.")
+alert("Please change the quantity in the cart.")
 <% else %>
   $(".cart-text").html("<%= escape_javascript(render 'layouts/cart_text') %>")
 <% end %>
