--- a/app/views/carts/_cart_row.html.erb
+++ b/app/views/carts/_cart_row.html.erb
@@ -8,7 +8,8 @@
     </div>
     <div class="col-xs-4">
       <br/><br/>
-      <h4><%= product.description%></h4><br/><br/><br/><br/>
+      <h4><%= product.description%>
+      </h4><br/><br/><br/><br/>
       <%= form_for order_item, remote: true do |f| %>
         <h4 class="text-right">Unit Price: <span style="color: green"><%= number_to_currency order_item.unit_price %></span></h4>
         <div class="row">
@@ -23,7 +24,7 @@
             </div>
           </div>
         </div>
-        <h4 class="text-right">Total Price: <span style="color: green"><%= number_to_currency order_item.total_price %></span></h4>
+        <h4 class="text-right">Total Item Price: <span style="color: green"><%= number_to_currency order_item.total_price %></span></h4>
       <% end %>
     </div>
     
