--- a/app/views/carts/_shopping_cart.html.erb
+++ b/app/views/carts/_shopping_cart.html.erb
@@ -17,4 +17,5 @@
     <%= render 'carts/cart_row', product: order_item.product, order_item: order_item, show_total: true %>
   <% end %>
   <h4 class="text-right">Total Price: <span style="color: blue"><%= number_to_currency current_order.subtotal %></span></h4>
+  <td><%= button_to 'Go to checkout', '#' , class: "btn btn-m btn-primary" %>
 <% end %>
