User must log in to add to cart

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,6 +4,7 @@
   <%= submit_tag "Search", name: nil %>
 <% end %>
 <div id="results">
+  <!-- renders the Products for Sale table -->
   <%= render @products %>
 </div>
 
