Attempting to fix product's search

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,10 +1,10 @@
 <h1>Product search</h1>
-<%= form_tag(searchproducts_path, remote:true, id: "search_form") do %>
+<%= form_tag(searchproducts_path, id: "psearch_form") do %>
   <%= text_field_tag :search, params[:search] %>
   <%= submit_tag "Search", name: nil %>
 <% end %>
 <div id="results">
   <!-- renders the Products for Sale table -->
-  <%= render @products %>
+  <%= render 'presults' %>
 </div>
 
