--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,8 +1,12 @@
+<!-- For product's search, but ommitting for project. use for future -->
+<% if false %>
 <h1>Product search</h1>
 <%= form_tag(searchproducts_path, id: "psearch_form") do %>
   <%= text_field_tag :search, params[:search] %>
   <%= submit_tag "Search", name: nil %>
 <% end %>
+<% end %>
+
 
 <div id="results">
   <!-- renders the Products for Sale table -->
