--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,7 +7,7 @@
 <% end %>
 <% end %>
 
-
+<h3 class="text-center">Products for Sale</h3>
 <div id="results">
   <!-- renders the Products for Sale table -->
   <%= render 'presults' %>
